# secinfra-rust

./: Cargo.toml  LICENSE  cargo.toml
.github/workflows/: publish.yml
src/: common.rs  compression_util.rs  construct_submissions_data.rs  construct_submissions_metadata.rs  filing_archive.rs  lib.rs  rss.rs  xbrl.rs
src/xml2tables/: mapping.rs  mod.rs  parser.rs  registry.rs  types.rs
