[package]
name = "secinfra"
version = "0.1.16"
edition = "2024"
build = "build.rs"
description = "A package to work with SEC data."
license = "MIT"
repository = "https://github.com/john-friedman/secinfra-rust"
readme = "readme.md"
keywords = ["sec", "edgar", "filings", "datamule"]

[dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
async-recursion = "1"
async-stream = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
futures = "0.3"
indexmap = "2"
parquet = { version = "56", features = ["arrow"] }
quick-xml = { version = "0.36", features = ["async-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = { version = "0.13", features = ["zstdmt"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tracing-subscriber = "0.3"
